--- a/css/style.css
+++ b/css/style.css
@@ -223,7 +223,46 @@
     background: linear-gradient(rgba(6, 3, 21, .5), rgba(6, 3, 21, .5)), url(../img/carousel-1.jpg) center center no-repeat;
     background-size: cover;
 }
-
+.page-header.page-header-about {
+    background: linear-gradient(rgba(6, 3, 21, .5), rgba(6, 3, 21, .5)), url(../img/carousel-2.jpg) center center no-repeat;
+    background-size: cover;
+}
+.page-header.page-header-service1 {
+    background: linear-gradient(rgba(6, 3, 21, .5), rgba(6, 3, 21, .5)), url(../img/bigservice-1.jpg) center center no-repeat;
+    background-size: cover;
+}
+.page-header.page-header-service2 {
+    background: linear-gradient(rgba(6, 3, 21, .5), rgba(6, 3, 21, .5)), url(../img/bigservice-2.jpg) center center no-repeat;
+    background-size: cover;
+}
+.page-header.page-header-service3 {
+    background: linear-gradient(rgba(6, 3, 21, .5), rgba(6, 3, 21, .5)), url(../img/bigservice-3.jpg) center center no-repeat;
+    background-size: cover;
+}
+.page-header.page-header-service4 {
+    background: linear-gradient(rgba(6, 3, 21, .5), rgba(6, 3, 21, .5)), url(../img/bigservice-4.jpg) center center no-repeat;
+    background-size: cover;
+}
+.page-header.page-header-service5 {
+    background: linear-gradient(rgba(6, 3, 21, .5), rgba(6, 3, 21, .5)), url(../img/bigservice-5.jpg) center center no-repeat;
+    background-size: cover;
+}
+.page-header.page-header-service6 {
+    background: linear-gradient(rgba(6, 3, 21, .5), rgba(6, 3, 21, .5)), url(../img/bigservice-6.jpg) center center no-repeat;
+    background-size: cover;
+}
+.page-header.page-header-service7 {
+    background: linear-gradient(rgba(6, 3, 21, .5), rgba(6, 3, 21, .5)), url(../img/bigservice-7.jpg) center center no-repeat;
+    background-size: cover;
+}
+.page-header.page-header-service8 {
+    background: linear-gradient(rgba(6, 3, 21, .5), rgba(6, 3, 21, .5)), url(../img/bigservice-8.jpg) center center no-repeat;
+    background-size: cover;
+}
+.page-header.page-header-contact {
+    background: linear-gradient(rgba(6, 3, 21, .5), rgba(6, 3, 21, .5)), url(../img/contact.jpg) center center no-repeat;
+    background-size: cover;
+}
 .breadcrumb-item + .breadcrumb-item::before {
     color: var(--light);
 }
@@ -473,4 +512,36 @@
 
 .footer .copyright a {
     color: var(--light);
+}
+.coloured-blocks
+  .coloured-item{
+    padding: 1em;
+  }.coloured-blocks
+  .coloured-item:nth-child(1){
+    background: #ffcece;
+  }.coloured-blocks
+  .coloured-item:nth-child(2){
+    background: #d8ffce;
+  }.coloured-blocks
+  .coloured-item:nth-child(3){
+    background: #e3ceff;
+  }.coloured-blocks
+  .coloured-item:nth-child(4){
+    background: #fffbce;
+}
+
+a.navbar-brand {
+  display: flex;
+  flex-direction: column;
+}
+
+h2.mb-2.text-white ~p {
+  font-size: 10px;
+  margin-bottom: 5px;
+  color: #fff;
+}
+
+h2.mb-2.text-white {
+  letter-spacing: 1px;
+  margin-bottom: 0!important;
 }
