--- a/css/style.css
+++ b/css/style.css
@@ -533,6 +533,8 @@
 a.navbar-brand {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 h2.mb-2.text-white ~p {
